--- a/pom.xml
+++ b/pom.xml
@@ -46,18 +46,17 @@
       <groupId>org.springframework.kafka</groupId>
     </dependency>
 
-    <!-- hBase Dependency -->
+    <!-- Simplified Hbase dependency -->
     <dependency>
       <groupId>org.apache.hbase</groupId>
-      <artifactId>hbase-client</artifactId>
+      <artifactId>hbase-shaded-client</artifactId>
     </dependency>
+
+    <!-- DropWizard Dependency Required for Metrics Collection -->
     <dependency>
-      <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-common</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.hadoop</groupId>
-      <artifactId>hadoop-auth</artifactId>
+      <groupId>io.dropwizard.metrics</groupId>
+      <artifactId>metrics-core</artifactId>
+      <version>4.2.25</version>
     </dependency>
 
     <!-- Lombok Dependency -->
@@ -89,9 +88,14 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>org.apache.hadoop</groupId>
-        <artifactId>hadoop-project</artifactId>
-        <version>3.3.4</version>
+        <groupId>org.apache.hbase</groupId>
+        <artifactId>hbase-shaded-client</artifactId>
+        <version>2.4.17</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.hbase</groupId>
+        <artifactId>hbase-shaded-client</artifactId>
+        <version>2.4.17</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
