--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,28 @@
       <version>2.15.3</version>
     </dependency>
 
+    <!-- MicroMeter Dependency -->
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-registry-prometheus</artifactId>
+    </dependency>
+
+    <!-- actuator dependency -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
+
+    <!--    Dependency requirement for kafka integration-->
+    <dependency>
+      <artifactId>spring-kafka</artifactId>
+      <groupId>org.springframework.kafka</groupId>
+    </dependency>
+    
   </dependencies>
 
   <dependencyManagement>
